--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 packer/variables.pkr.hcl
 packer/variables.json
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+.terraform
+terraform/key.json
