--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ packer/variables.json
 *.tfstate
 *.tfstate.*.backup
 *.tfstate.backup
-*.tfvars
-.terraform
+terraform/terraform.tfvars
 terraform/key.json
+terraform/.terraform/
