--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ packer/variables.json
 *.tfstate
 *.tfstate.*.backup
 *.tfstate.backup
-terraform/terraform.tfvars
-terraform/key.json
-terraform/.terraform/
+*.tfvars
+key.json
+.terraform
