--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -6,3 +6,5 @@ private_key_path         = "privatekeypath"
 image_id                 = "someid"
 subnet_id                = "someid"
 service_account_key_file = "somekey.json"
+app_disk_image_id        = "someid"
+db_disk_image_id         = "someid"
