--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
- "key_file": "key.json.example",
- "folder_id": "some_id",
- "source_image_id": "ubuntu-1604-lts"
+	"key_file": "packer/key.json.example"
+	"folder_id": "b1g",
+        "source_image_id": "ubuntu-1604-lts"
 }
