--- a/ansible/packer_db.yml
+++ b/ansible/packer_db.yml
@@ -1,25 +1,8 @@
 ---
-- name: Install MongoDB 3.2
-  hosts: all
+- hosts: db
   become: yes
-  tasks:
-  - name: Add APT key
-    apt_key:
-      id: EA312927
-      keyserver: keyserver.ubuntu.com
+  roles:
+    - db
 
-  - name: Add APT repository
-    apt_repository:
-      repo: deb [ arch=amd64,arm64 ] http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse
-      state: present
-
-  - name: Install mongodb package
-    apt:
-      allow_unauthenticated: yes
-      name: mongodb-org
-      state: present
-
-  - name: Configure service supervisor
-    systemd:
-      name: mongod
-      enabled: yes
+- import_playbook: base.yml
+- import_playbook: deploy.yml
