--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -10,4 +10,6 @@
   roles:
     - db
 
-- import_playbook: users.yml
+      #- import_playbook: users.yml
+- import_playbook: base.yml
+- import_playbook: deploy.yml
