--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -3,36 +3,5 @@
   debug:
    msg: "This host is ins {{ env }} environment"
 
-- name: Add unit file for Puma
-  copy:
-   src: puma.service
-   dest: /etc/systemd/system/puma.service
-  notify: reload puma
-
-- name: Add config for DB connection
-  template:
-   src: db_config.j2
-   dest: /home/ubuntu/db_config
-   owner: ubuntu
-   group: ubuntu
-
-- name: Install git
-  apt:
-   name: git
-   state: present
-   update_cache: yes
-
-- name: Get the latest version app
-  git:
-   repo: 'https://github.com/express42/reddit.git'
-   dest: /home/ubuntu/reddit
-   version: monolith
-  notify: reload puma
-
-- name: Install app
-  bundler:
-   state: present
-   chdir: /home/ubuntu/reddit
-
-- name: Enable Puma
-  systemd: name=puma enabled=yes
+- include: ruby.yml
+- include: puma.yml  
