Added roles to packer yml's

--- a/ansible/packer_app.yml
+++ b/ansible/packer_app.yml
@@ -5,6 +5,5 @@
     - app
     - jdauphant.nginx
 
-- import_playbook: base.yml
-- import_playbook: deploy.yml
-
+- import_playbook: playbooks/base.yml
+- import_playbook: playbooks/deploy.yml
