--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -3,5 +3,5 @@
   debug:
    msg: "This host is ins {{ env }} environment"
 
-- include: ruby.yml
-- include: puma.yml  
+- include_tasks: ruby.yml
+- include_tasks: puma.yml  
