--- a/packer/app.json
+++ b/packer/app.json
@@ -10,7 +10,7 @@
      "ssh_username": "ubuntu",
      "platform_id": "standard-v1",
      "zone": "ru-central1-a",
-     "subnet_id": "e9bcv4qbgd1n5p2hakga",
+     "subnet_id": "e9b30gp65shbcnonglpe",
      "use_ipv4_nat": true
     }
   ],
@@ -18,6 +18,8 @@
   "provisioners": [
     {
      "type": "ansible",
+     "extra_arguments": ["--tags","ruby"],
+     "ansible_env_vars": ["ANSIBLE_ROLES_PATH={{ pwd }}/ansible/roles"],
      "playbook_file": "ansible/packer_app.yml"
     }
   ]
