--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,5 @@
-PORT=port
-MONGO_VERSION=ver
-COMMENT_VERSION=ver
-POST_VERSION=ver
-UI_VERSION=ver
+PORT=9999
+MONGO_VERSION=111
+COMMENT_VERSION=222
+POST_VERSION=333
+UI_VERSION=444
