--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
 build_job:
   stage: build
   script:
-    - echo 'Buildingg'
+    - echo 'Building'
 
 test_unit_job:
   stage: test
