--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,16 +15,32 @@ services:
       - ${PORT}:${PORT}/tcp
     networks:
       - front_net
+    logging:
+      driver: 'fluentd'
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   post:
     image: ${USERNAME}/post:${POST_VERSION}
     networks:
       - front_net
       - back_net
+    logging:
+      driver: 'fluentd'
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   comment:
     image: ${USERNAME}/comment:${COMMENT_VERSION}
     networks:
       - front_net
       - back_net
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   prometheus:
     image: ${USERNAME}/prometheus
     networks:
@@ -59,10 +75,4 @@ volumes:
 
 networks:
   front_net:
-    ipam:
-      config:
-        - subnet: 10.0.1.0/24
   back_net:
-    ipam:
-      config:
-        - subnet: 10.0.2.0/24
