Initial kubernetes 1 commit

--- a/logging/fluentd/fluent.conf
+++ b/logging/fluentd/fluent.conf
@@ -15,8 +15,8 @@
   <parse>
     @type grok
     <grok>
-grok_pattern %{RUBY_LOGGER}
       pattern %{RUBY_LOGGER}
+### grok_pattern %{RUBY_LOGGER}
     </grok>
   </parse>
   key_name log
