--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -26,6 +26,7 @@ spec:
       - image: mongo:4.4.6
         name: mongo
         volumeMounts:
+#          name: mongo-gce-pd-storage
         - name: mongo-persistent-storage
           mountPath: /data/db
       volumes:
